--- a/baseweb_components/streamlit_baseweb/modal/public/index.html
+++ b/baseweb_components/streamlit_baseweb/modal/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-  <body style="background-color: transparent;";>
+<html lang="en" style="background: #ffffff01 !important">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="overflow: visible"></div>
+    <div id="root" style="--background-color: #ffffff01"></div>
   </body>
 </html>
