### Updates - improved Button's doc - improved Modal documentation - removed dead css in index.html of Modal - dynamically set Modal's height - added roadmap to README.md

--- a/baseweb_components/streamlit_baseweb/modal/public/index.html
+++ b/baseweb_components/streamlit_baseweb/modal/public/index.html
@@ -2,6 +2,6 @@
 <html lang="en" style="background: #ffffff01 !important">
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="--background-color: #ffffff01"></div>
+    <div id="root"></div>
   </body>
 </html>
