--- a/bootstrap_carousel/streamlit_carousel/carousel/public/index.html
+++ b/bootstrap_carousel/streamlit_carousel/carousel/public/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" style="background: #ffffff01 !important;">
+<!doctype html>
+<html lang="en" style="background: #ffffff01 !important">
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
