[feat] Upgrade templates and Cookiecutter to utilize Vite, modern React + TypeScript versions (#102)
* Update README, dependencies, and some formatting

* Move to Vite

* Undo unnecessary changes

* Fixes for build to match prior

* Better Type Safety

* Update comments

* Cookiecutter react template updates

* template-reactless upgrade to Vite

* Update cookiecutter for frontend-reactless

* Undo unnecessary changes

* Update vite config

* Update template

* Update all example package.json

* Update MaterialLogin

* Update CustomDataframe

* Update RadioButton

* Update github action infra

* Comments

* Update MaterialLogin tests

* Undo unnecessary changes

* Remove vite-tsconfig-paths

* Fix up Vite env port handling

* Reactless fix

* Reactless fix

--- a/examples/MaterialLogin/material_login/frontend/index.html
+++ b/examples/MaterialLogin/material_login/frontend/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Streamlit Component" />
-    <link rel="stylesheet" href="bootstrap.min.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -21,5 +20,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
