--- a/template-reactless/my_component/frontend/index.html
+++ b/template-reactless/my_component/frontend/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Streamlit Component - Material Login</title>
+    <title>Streamlit Component</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Streamlit Component" />
+    <link rel="stylesheet" href="/bootstrap.min.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
